# discord-classes-bot

./: README.md  build_weekly.js  course_slots.json  slots_template.json  weekly.json
bot/: Cargo.toml
bot/src/: get_schedule.rs  main.rs  sched.rs  webhook_manager.rs
