[package]
name = "bot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4.19", features = ["serde"] }
hyper = { version = "0.14.16", features = ["full"] }
hyper-tls = "0.5.0"
serde = { version = "1.0.133", features = ["derive"] }
serde_json = "1.0.74"
tokio = { version = "1.15.0", features = ["full"] }
